[package]
name = "volcengine-rust-sdk"
version = "0.1.0"
edition = "2021"
description = "volcengine rust sdk"
license = "MIT OR Apache-2.0"

[dependencies]
volcengine-sdk-protobuf = "0.1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
url = "2.2"
