[package]
name = "volcengine-rust-sdk"
version = "1.0.0"
edition = "2021"
description = "volcengine rust sdk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yangjerry110/volcengine-rust-sdk" # 添加仓库地址
documentation = "https://docs.rs/volcengine-rust-sdk"  # docs.rs 会自动生成，可省略

[dependencies]
volcengine-sdk-protobuf = "1.0.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
url = "2.2"
urlencoding = "2.1"
